--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -517,7 +517,7 @@
 
 
     <h2>
-      Time Zone
+      Time Zone Match
     </h2>
     <div class="row">
       <div class="span5">
@@ -534,7 +534,7 @@
         <div class="alert alert-block alert-info">
           <h3 class="alert-heading">Time Zone</h3>
           <p>
-            If The your Browser time zone and Ip time zone does not match then it will always go to safe landing page.
+            If users Browser time zone and IP time zone does not match then the user will be blocked.
           </p>
         </div>
       </div>
