Change the text

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -532,7 +532,7 @@
       </div>
       <div class="span7">
         <div class="alert alert-block alert-info">
-          <h3 class="alert-heading">Time Zone</h3>
+          <h3 class="alert-heading">Time Zone Match</h3>
           <p>
             If users Browser time zone and IP time zone does not match then the user will be blocked.
           </p>
