--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <%= stylesheet_link_tag 'token.input.css'  %>
   <%= stylesheet_link_tag 'token.input-facebook.css'  %>
   <%= stylesheet_link_tag 'tweaks.css'  %>
+  <%= stylesheet_link_tag 'all.css'  %>
   <%= csrf_meta_tag %>
 </head>
 <body>
