--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -886,3 +886,11 @@ div.token-input-dropdown-facebook ul li.token-input-selected-dropdown-item-faceb
     background-color: #3b5998;
     color: #fff;
 }
+
+.loader {
+    position: fixed;
+    left: calc(50% - 125px);
+    top: calc(50% - 125px);
+    z-index: 9999;
+    text-align: center;
+}
