Change tehe text

--- a/app/views/hits/_list.html.erb
+++ b/app/views/hits/_list.html.erb
@@ -9,7 +9,7 @@
       <th>From IP</th>
       <th> ISP </th>
       <th>Referrer</th>
-      <th>TimeZOne</th>
+      <th>TimeZone</th>
       <th>Passed</th>
       <th>Banned</th>
       <th>Reason Blocked</th>
