--- a/app/views/hits/error_logs.html.erb
+++ b/app/views/hits/error_logs.html.erb
@@ -22,7 +22,7 @@
         <td><%= error.name %></td>
         <td><%= error.referer %></td>
         <td><%= error.campaign_id %></td>
-        <td><%= error.created_at %></td>
+        <td><%= formatted(error.created_at) %></td>
       </tr>
   <% end %>
   </tbody>
