--- a/app/views/campaign_mailer/password_changed.html.erb
+++ b/app/views/campaign_mailer/password_changed.html.erb
@@ -1,4 +1,5 @@
 <h2>Your password has changed</h2>
 <hr>
-<p>Hi <%= @user.email %>,</p>
-<p>We wanted to let you know that your password was changed By admin.Please Contact with admin for the password </p>
+<p>Hi <%= @email %>,</p>
+<p>Hi <%= @password %></p>
+<p>We wanted to let you know that your password was changed By admin. </p>
