Add sign in url

--- a/app/views/campaign_mailer/create_user.html.erb
+++ b/app/views/campaign_mailer/create_user.html.erb
@@ -4,3 +4,4 @@
 <p>Your account has been created using following information </p>
 <p>Email: <%= @email %></p>
 <p>Password: <%= @password %></p>
+<p>You can login from  <%= link_to "Here", new_user_session_url %></p>
